swagger updated for delet category
